# supercomp

./: .gitignore  .requirements.txt.swp  Plano de aula - SuperComp.xlsx  README.md  aulas.pmd  mkdocs.yml  plano-de-aulas-t1.xlsx  plano-de-aulas-t2.xlsx  requirements.txt
01-intro-cpp/: pratica.md
02-oo-cpp/: pratica.md
03-stl/: pratica.md  tarefa2.cpp
04-cmake-debugging/: pratica.md
05-simd-I/: pratica.md
06-simd-II/: avx-sqrt.cpp  pratica.md
08-threads-I/: pi-numeric-integration.cpp  pratica.md
09-threads-II/: pratica.md
10-threads-III/: mandel.cpp  pratica.md
11-thread-safety/: pi_mc.c  roteiro.md
12-tarefas/: pi_recursivo.cpp  pratica.md
13-gpu-I/: pratica.md
14-gpu-II/: exemplo-pointer-gpu.cu  pratica.md
15-gpu-III/: esqueleto_imagem.cpp  pratica.md
17-gpu-final/: pi-integral.cu  pratica.md  rand.cu
18-mpi-intro/: hello.cpp  mpi-errado1.cpp  pratica.md
19-mpi-coletivo/: exemplo-scatter.cpp  exemplo0.cpp  max-scatter.cpp  pratica.md
20-mpi-cluster/: mpi_latency.c  roteiro.md
boost/: Makefile  exemplo-accumulator.cpp  exemplo-any.cpp  exemplo-distribuicao_normal.cpp  exemplo-matrizes.cpp  exemplo-random.cpp  exemplo-salvando_aleatorios.cpp  exemplo-scoped_ptr.cpp  exemplo-shared_ptr.cpp  tarefa1.cpp
distributedMemory/: mpi_avg.cpp  mpi_broadcast.cpp  mpi_hello_world.cpp  mpi_reduce_avg.cpp  mpi_reduce_stddev.cpp  mpi_send_rec.cpp
exemplos/: main.cpp  seq.cpp  seq.h
gpu/: GPUinfo.cu  HelloWorld.cu  HelloWorld2.cu  (+2 more)
multi-core/04-projeto/visualizador/: CMakeLists.txt  README.md  body.h  main.cpp  visualizador.cpp  visualizador.h
(+373 files in other folders)
